--- a/index.html
+++ b/index.html
@@ -20,7 +20,32 @@
         </nav>
     </header>
     <main>
-
+        <section class="hero">
+            <div class="herodiv">
+            <h1 class="hsec1">Welcome to Heights</h1>
+            <p class="hsec2">Where events are made to last for enternity</p>
+            <button class="bkbtn"><a href="book.html" class="nav__link">Book Now</a></button>
+            </div>
+        </section>
+        
+        <h1 class="eventh1">Our Events</h1>
+        <div class="events">
+            <div class="eventlist">
+                <img src="photo/guitar-logo-template-icon-illustration-design-free-vector.jpg" alt="" class="eventimg">
+                <h2 class="eventh2">Concerts</h2>
+                <p class="eventp">Experience electrifying performances by top artists and bands in an unforgettable atmosphere.</p>
+            </div>
+            <div class="eventlist">
+                <img src="photo/wedding.jpg" alt="" class="eventimg">
+                <h2 class="eventh2">Weddings</h2>
+                <p class="eventp">Celebrate your special day with our exquisite wedding planning and venue services.</p>
+            </div>
+            <div class="eventlist">
+                <img src="photo/music fest.jpg" alt="" class="eventimg">
+                <h2 class="eventh2">Music Festivals</h2>
+                <p class="eventp">Embark on a musical journey with our vibrant music festivals and concerts.</p>
+            </div>
+        </div>
     </main>
     <footer>
 
