--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <button class="bkbtn"><a href="book.html" class="nav__link">Book Now</a></button>
             </div>
         </section>
-        
+
         <h1 class="eventh1">Our Events</h1>
         <div class="events">
             <div class="eventlist">
@@ -45,6 +45,32 @@
                 <h2 class="eventh2">Music Festivals</h2>
                 <p class="eventp">Embark on a musical journey with our vibrant music festivals and concerts.</p>
             </div>
+        </div>
+
+        <h1 class="testih1">What Our Clients Say</h1>
+        <div class="testimonials">
+            <div class="testimony">
+                <p class="testip">"Heights made our wedding day absolutely perfect! The attention to detail and beautiful venue exceeded our expectations."</p>
+                <h3 class="testih3">- Sarah & John</h3>
+            </div>
+            <div class="testimony">
+                <p class="testip">"The event was flawless from start to finish. The team at Heights truly understands how to create unforgettable moments."</p>
+                <h3 class="testih3">- Michael & Emily</h3>
+            </div>
+            <div class="testimony">
+                <p class="testip">"We couldn't have asked for a better experience. The attention to detail and professionalism were outstanding."</p>
+                <h3 class="testih3">- David & Lisa</h3>
+            </div>
+        </div>
+
+        <div class="newsletter">
+            <h2 class="newsh2">Subscribe to our Newsletter</h2>
+            <p class="newsp">Stay updated with the latest events and offers from Heights.</p>
+            <form class="newsform" action="mailto:lordofficial1972@gmail.com" method="post" enctype="text/plain">
+                <input type="email" placeholder="Enter your email" class="newsemail" required>
+                <input type="comment" placeholder="Your comments" class="newscomment">
+                <button type="submit" class="newssubmit">Subscribe</button>
+            </form>
         </div>
     </main>
     <footer>
