--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@
             <h2 class="newsh2">Subscribe to our Newsletter</h2>
             <p class="newsp">Stay updated with the latest events and offers from Heights.</p>
             <form class="newsform" action="mailto:lordofficial1972@gmail.com" method="post" enctype="text/plain">
+                <p>EMAIL</p>
                 <input type="email" placeholder="Enter your email" class="newsemail" required>
+                <P>COMMENTS</P>
                 <input type="comment" placeholder="Your comments" class="newscomment">
                 <button type="submit" class="newssubmit">Subscribe</button>
             </form>
