--- a/index.html
+++ b/index.html
@@ -34,16 +34,19 @@
                 <img src="photo/guitar-logo-template-icon-illustration-design-free-vector.jpg" alt="" class="eventimg">
                 <h2 class="eventh2">Concerts</h2>
                 <p class="eventp">Experience electrifying performances by top artists and bands in an unforgettable atmosphere.</p>
+                <button class="book">book now</button>
             </div>
             <div class="eventlist">
                 <img src="photo/wedding.jpg" alt="" class="eventimg">
                 <h2 class="eventh2">Weddings</h2>
                 <p class="eventp">Celebrate your special day with our exquisite wedding planning and venue services.</p>
+                <button class="book">book now</button>
             </div>
             <div class="eventlist">
                 <img src="photo/music fest.jpg" alt="" class="eventimg">
                 <h2 class="eventh2">Music Festivals</h2>
                 <p class="eventp">Embark on a musical journey with our vibrant music festivals and concerts.</p>
+                <button class="book">book now</button>
             </div>
         </div>
 
@@ -73,6 +76,27 @@
                 <input type="comment" placeholder="Your comments" class="newscomment">
                 <button type="submit" class="newssubmit">Subscribe</button>
             </form>
+        </div>
+
+        <div class="ourstaff">
+            <h1 class="staffh1">Meet Our Staff</h1>
+            <div class="staffmembers">
+                <div class="staffmember">
+                    <img src="photo/emmet222.jpg" alt="Staff Member 1" class="staffimg">
+                    <h3 class="staffname">emmet traore jr</h3>
+                    <p class="staffrole">Event Coordinator</p>
+                </div>
+                <div class="staffmember">
+                    <img src="photo/curtis.jpg" alt="Staff Member 2" class="staffimg">
+                    <h3 class="staffname">curtis gidings</h3>
+                    <p class="staffrole">Venue Manager</p>
+                </div>
+                <div class="staffmember">
+                    <img src="photo/vaye.jpg" alt="Staff Member 3" class="staffimg">
+                    <h3 class="staffname">Emmanuel vaye</h3>
+                    <p class="staffrole">Marketing Specialist</p>
+                </div>
+            </div>
         </div>
     </main>
     <footer>
