--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="eventlist">
                 <img src="photo/guitar-logo-template-icon-illustration-design-free-vector.jpg" alt="" class="eventimg">
                 <h2 class="eventh2">Concerts</h2>
-                <p class="eventp">Experience electrifying performances by top artists and bands in an unforgettable atmosphere.</p>
+                <p class="eventp">Experience electrifying performances by top artists and bands every year.</p>
                 <button class="book">book now</button>
             </div>
             <div class="eventlist">
@@ -84,20 +84,22 @@
                 <div class="staffmember">
                     <img src="photo/emmet222.jpg" alt="Staff Member 1" class="staffimg">
                     <h3 class="staffname">emmet traore jr</h3>
-                    <p class="staffrole">Event Coordinator</p>
+                    <p class="staffrole">Prsident</p>
                 </div>
                 <div class="staffmember">
                     <img src="photo/curtis.jpg" alt="Staff Member 2" class="staffimg">
                     <h3 class="staffname">curtis gidings</h3>
-                    <p class="staffrole">Venue Manager</p>
+                    <p class="staffrole">Head Of Social Media</p>
                 </div>
                 <div class="staffmember">
                     <img src="photo/vaye.jpg" alt="Staff Member 3" class="staffimg">
                     <h3 class="staffname">Emmanuel vaye</h3>
-                    <p class="staffrole">Marketing Specialist</p>
+                    <p class="staffrole">Head Of Graphics</p>
                 </div>
             </div>
         </div>
+
+        div.ourpartners
     </main>
     <footer>
 
