--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>heights</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-1m9H1U4Ne1fImZ6B5W0A3g9W4K1U8CEW5e5i7A1d8T2Ne2Q9/5eFzExG1J51U6R5+Klug==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 </head>
 <body>
     <header>
@@ -85,24 +87,48 @@
                     <img src="photo/emmet222.jpg" alt="Staff Member 1" class="staffimg">
                     <h3 class="staffname">emmet traore jr</h3>
                     <p class="staffrole">Prsident</p>
+                    <p class="staffdetails">Oversees all organizational operations, <br> ensuring that events are executed flawlessly. <br>
+                    leads the team with vision and dedication, guiding the organization through challenges. <br>  building a strong foundation for success.</p>
                 </div>
                 <div class="staffmember">
                     <img src="photo/curtis.jpg" alt="Staff Member 2" class="staffimg">
                     <h3 class="staffname">curtis gidings</h3>
                     <p class="staffrole">Head Of Social Media</p>
+                    <p class="staffdetails">Manages the organization's social media presence, <br> creating engaging content and strategies to connect with the audience. <br>
+                    driving online engagement and brand awareness.</p>
                 </div>
                 <div class="staffmember">
                     <img src="photo/vaye.jpg" alt="Staff Member 3" class="staffimg">
                     <h3 class="staffname">Emmanuel vaye</h3>
                     <p class="staffrole">Head Of Graphics</p>
+                    <p class="staffdetails">Controlls the organization visual image and design, <br> ensuring that events are visually appealing and engaging. <br>
+                    bringing creativity and innovation to every project.</p>
                 </div>
             </div>
         </div>
-
-        div.ourpartners
     </main>
     <footer>
-
+        <div class="footer-content">
+            <p class="footer-text">© 2024 Heights. All rights reserved.</p>
+            <ul class="footer-links">
+                <li><a href="index.html" class="footer-link">Home</a></li>
+                <li><a href="about.html" class="footer-link">About</a></li>
+                <li><a href="services.html" class="footer-link">Services</a></li>
+                <li><a href="contact.html" class="footer-link">Contact</a></li>
+            </ul>
+        </div>
+        <div class="footer-social">
+            <a href="https://www.facebook.com/" class="footer-social-link">facebook<i class="fab fa-facebook"></i></a>
+            <a href="https://twitter.com/" class="footer-social-link">twitter<i class="fab fa-twitter"></i></a>
+            <a href="https://www.instagram.com/" class="footer-social-link">instagram<i class="fab fa-instagram"></i></a>
+            <a href="https://www.linkedin.com/" class="footer-social-link">linkedin<i class="fab fa-linkedin"></i></a>
+        </div>
+        <div class="adress">
+            <p class="adressp">123 Event St, Celebration City, Country</p>
+            <p class="adressp">Phone: (123) 456-7890</p>
+            <p class="adressp">Email: 8QGx8@example.com</p>
+        </div>
     </footer>
 </body>
+<script src="script.js"></script>
 </html>
