--- a/about.html
+++ b/about.html
@@ -29,6 +29,57 @@
             <button class="bkbtn"><a href="book.html" class="nav__link">Book Now</a></button>
             </div>
         </section>
+
+        <div class="aboutus">
+            <h2 class="aboutus-h2">Who We Are</h2>
+            <p class="aboutus-p"> Heights, founded December 20, 2025 by <b><i>Emmet Traore Jr</i></b>, with the dreams of creating memorable events that leave a lasting impression. <br> shifting the event planning industry one celebration at a time,
+            and bringing dreams to life. <br><br>
+            Heights is a premier event planning company dedicated to creating unforgettable experiences for our clients. With years of expertise in the industry,<br>
+            we specialize in organizing a wide range of events, from corporate gatherings to personal celebrations. Our team of passionate professionals works closely with clients to <br>
+            fully understand their vision and bring it to life with meticulous attention to detail. At Heights, we pride ourselves on our creativity, reliability, and commitment to excellence, <br>
+            ensuring that every event we plan is a resounding success.</p>
+        </div>
+
+        <div class="ouraims">
+            <h2 class="ouraims-h2">Our Aims</h2>
+            <ul class="ouraims-ul">
+                <li class="ouraims-li">To create unforgettable experiences that exceed client expectations 🎉</li>
+                <li class="ouraims-li">To provide top-notch event planning services that blend creativity and professionalism 💼</li>
+                <li class="ouraims-li">To innovate and elevate the events industry in Liberia 🌟</li>
+            </ul>
+        </div>
+
+        <div class="objectives">
+            <h2 class="objectives-h2">Our Objectives</h2>
+            <ul class="objectives-ul">
+                <li class="obj-list">Deliver personalized event planning services that cater to diverse client needs 🤝</li>
+                <li class="obj-list">Ensure timely and budget-friendly execution of events ⏰</li>
+                <li class="obj-list">Foster strong relationships with vendors, suppliers, and clients 🤝</li>
+                <li class="obj-list">Stay updated on industry trends and best practices 📚</li>
+                <li class="obj-list">Expand Heights' services to cater to a wider range of events (e.g., corporate, social, cultural) 📈</li>
+            </ul>
+        </div>
+
+        <div class="mission">
+            <h2 class="ourmission-h2">Mission statement</h2>
+            <p class="ourmission-p">At Heights, we craft unforgettable experiences that elevate moments and create lasting memories,<br>
+                blending creativity with precision to exceed client expectations.</p>
+        </div>
+
+        <div class="vision">
+            <h2 class="ourvision-h2">Vision statement</h2>
+            <p class="ourvision-p">To be Liberia's premier events planning organization, synonymous with innovation, excellence,<br>
+                and passion, shaping the future of events.</p>
+        </div>
+
+        <div class="goals">
+            <h2 class="ourgoals-h2">Goals</h2>
+            <ul class="ourgoals-ul">
+                <li class="goals-list">To create unforgettable experiences that exceed client expectations</li>
+                <li class="goals-list">To provide top-notch event planning services that blend creativity and professionalism</li>
+                <li class="goals-list">To innovate and elevate the events industry in Liberia</li>
+            </ul>
+        </div>
         </main>
     <footer>
         <div class="footer-content">
